--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Name, Date -->
+<!-- Joshua Velasquez, 12/17/24 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elon Musk</title>
+</head>
+<body>
+    <h1>Elon Musk</h1>
+    <img src="Elon-Musk.jpg" alt="EM">
+    <p>Elon Musk has founded several different companies. He has bought Tesla,Space X, Twitter,Bitcoin, </p>
+</body>
+</html>
