--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elon Musk</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Elon Musk</h1>
     <img src="Elon-Musk.jpg" alt="EM">
-    <p>Elon Musk has founded several different companies. He has bought Tesla,Space X, Twitter,Bitcoin, </p>
+    <p>Elon Musk has founded several different companies. He has bought compaines like Tesla, Space X, Twitter, and Bitcoin for example. He is the co-founder and CEO of Tesla. Elon Musk is a 53 year old man that is one of the richest people in the world. His net worth is greater than $450 billion.</p>
+    
+    <table>
+        <tr>
+            <th><h2>Category</h2></th>
+           <th><h2>Information</h2></th>  
+        </tr>  
+        <tr>
+           <th>Date of Birth</th>
+           <td>June 28,1969</td>
+          <tr><th>Death Place</th>
+            <td>Still alive</td>
+            <tr><th>Birthplace</th>
+            <td>South Africa</td>
+            <tr><th>Education</th>
+            <td>Bachelor of Arts in physics and a Bachelor of Science in economics</td>
+            <tr><th>Major Achievements</th>
+            <td></td>
+            <tr><th>Awards/Recognition</th></tr>
+        </tr>
+    </table>
+    <br>
+    <p>"When something is important enough, you do it even if the odds are not in your favor"</p>
+
 </body>
 </html>
