The table still works and I just have to add link.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <tr><th>Education</th>
             <td>Bachelor of Arts in physics and a Bachelor of Science in economics</td>
             <tr><th>Major Achievements</th>
-            <td></td>
-            <tr><th>Awards/Recognition</th></tr>
+            <td>CEO and founder of Tesla, and The Musk Foudation</td>
+            <tr><th>Awards/Recognition</th>
+            <td> Won Axel Springer Award in 2020</td>
         </tr>
     </table>
     <br>
     <p>"When something is important enough, you do it even if the odds are not in your favor"</p>
-
 </body>
 </html>
