I finished putting the link & also putting boxes.

--- a/index.html
+++ b/index.html
@@ -10,29 +10,39 @@
 <body>
     <h1>Elon Musk</h1>
     <img src="Elon-Musk.jpg" alt="EM">
-    <p>Elon Musk has founded several different companies. He has bought compaines like Tesla, Space X, Twitter, and Bitcoin for example. He is the co-founder and CEO of Tesla. Elon Musk is a 53 year old man that is one of the richest people in the world. His net worth is greater than $450 billion.</p>
-    
     <table>
+  <p><td>Elon Musk has founded several different companies. He has bought compaines like Tesla, Space X, Twitter, and Bitcoin for example. He is the co-founder and CEO of Tesla. Elon Musk is a 53 year old man that is one of the richest people in the world. His net worth is greater than $450 billion.</td></p>
+   <p></table></p>
+
+  <table>
         <tr>
             <th><h2>Category</h2></th>
            <th><h2>Information</h2></th>  
         </tr>  
         <tr>
            <th>Date of Birth</th>
-           <td>June 28,1969</td>
-          <tr><th>Death Place</th>
-            <td>Still alive</td>
+           <th>June 28,1969</th>
+          <tr><th>Death Place></th>
+            <th>Still alive</th>
             <tr><th>Birthplace</th>
-            <td>South Africa</td>
+            <th>South Africa</th>
             <tr><th>Education</th>
-            <td>Bachelor of Arts in physics and a Bachelor of Science in economics</td>
+            <th>Bachelor of Arts in physics and a Bachelor of Science in economics</th>
             <tr><th>Major Achievements</th>
-            <td>CEO and founder of Tesla, and The Musk Foudation</td>
+            <th>CEO and founder of Tesla, and The Musk Foudation</th>
             <tr><th>Awards/Recognition</th>
-            <td> Won Axel Springer Award in 2020</td>
+            <th> Won Axel Springer Award in 2020</th>
         </tr>
     </table>
+
     <br>
-    <p>"When something is important enough, you do it even if the odds are not in your favor"</p>
+   <table>
+    <td>"When something is important enough, you do it even if the odds are not in your favor"</td>
+   </table>
+
+   <table>
+  <p><td a href="url">https://www.biography.com/business-leaders/elon-musk</td></p>
+   </table>
+
 </body>
 </html>
